Assignment2/Assignment2_Impl/student.yy.output
Terminals unused in grammar

   INVERSE
   PERPENDICULAR
   DOMINANTAXIS
   LUMINANCE
   RAND
   MIN
   MAX
   ILLUMINANCE
   AMBIENT
   EOL


State 99 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: parse
    2        | program parse

    3 parse: stmt
    4      | shader_def
    5      | function_def
    6      | decl
    7      | decl_qualifier

    8 shader_def: class_def SHADER_DEF SEMICOLON

    9 class_def: KEYWORD id COLON

   10 decl_qualifier: QUALIFIER deftype SEMICOLON
   11               | deftype EQUAL val SEMICOLON
   12               | deftype EQUAL state_all SEMICOLON
   13               | deftype EQUAL binary_math_ops equation SEMICOLON
   14               | deftype EQUAL equation SEMICOLON

   15 decl: deftype SEMICOLON
   16     | deftype EQUAL func_call SEMICOLON
   17     | deftype EQUAL id SEMICOLON
   18     | deftype EQUAL type_with_initializers LPARENTHESIS param_list RPARENTHESIS

   19 stmt: assignment SEMICOLON
   20     | func_stmt SEMICOLON
   21     | return_statement SEMICOLON
   22     | if_statement
   23     | block
   24     | while_loop
   25     | for_loop

   26 assignment: assign val
   27           | assign id
   28           | assign equation
   29           | assign binary_math_ops id
   30           | assign binary_math_ops equation
   31           | assign state_all

   32 binary_math_ops: MUL
   33                | DIV
   34                | ADD
   35                | SUB

   36 equation: param_type binary_math_ops param_type
   37         | param_type binary_math_ops parenthesis_equation
   38         | parenthesis_equation
   39         | equation binary_math_ops param_type
   40         | equation binary_math_ops parenthesis_equation

   41 parenthesis_equation: LPARENTHESIS equation RPARENTHESIS

   42 assign: state_all EQUAL
   43       | id EQUAL

   44 deftype: TYPE id
   45        | type_with_initializers id

   46 type_with_initializers: COLOR
   47                       | VEC3

   48 func_stmt: assign func_call
   49          | func_call

   50 func_call: id LPARENTHESIS param_list RPARENTHESIS
   51          | type_with_initializers LPARENTHESIS param_list RPARENTHESIS
   52          | keyword_func LPARENTHESIS param_list RPARENTHESIS

   53 keyword_func: POW
   54             | DOT
   55             | SQRT
   56             | TRACE
   57             | HIT

   58 param_list: %empty
   59           | param_type
   60           | equation
   61           | param_list COMMA param_type
   62           | param_list COMMA equation

   63 param_type: val
   64           | id
   65           | func_call
   66           | state_all

   67 function_def: deftype arg_list block

   68 args: %empty
   69     | deftype
   70     | equation
   71     | args COMMA deftype

   72 arg_list: LPARENTHESIS args RPARENTHESIS

   73 block: LBRACE code_block RBRACE

   74 code_block: %empty
   75           | code_block stmt
   76           | code_block decl
   77           | code_block decl_qualifier

   78 val: INT
   79    | FLOAT

   80 id: IDENTIFIER
   81   | METHOD
   82   | SWIZZLE

   83 return_statement: RETURN_KEY val
   84                 | RETURN_KEY id

   85 if_statement: IF bool_ops stmt
   86             | IF bool_ops stmt ELSE stmt

   87 while_loop: WHILE bool_ops stmt

   88 for_loop: FOR for_condition stmt

   89 for_condition: LPARENTHESIS assignment SEMICOLON bool_val SEMICOLON unary_ops RPARENTHESIS

   90 bool_ops: LPARENTHESIS bool_val RPARENTHESIS

   91 bool_val: param_type comparator param_type
   92         | id

   93 comparator: LT
   94           | GT
   95           | GE
   96           | LE

   97 unary_ops: INC id
   98          | id INC
   99          | DEC id
  100          | id DEC

  101 state_all: STATE


Terminals, with rules where they appear

$end (0) 0
error (256)
KEYWORD (258) 9
IDENTIFIER (259) 80
COLON (260) 9
TYPE (261) 44
SWIZZLE (262) 82
SEMICOLON (263) 8 10 11 12 13 14 15 16 17 19 20 21 89
QUALIFIER (264) 10
EQUAL (265) 11 12 13 14 16 17 18 42 43
INT (266) 78
FLOAT (267) 79
LPARENTHESIS (268) 18 41 50 51 52 72 89 90
RPARENTHESIS (269) 18 41 50 51 52 72 89 90
LBRACE (270) 73
RBRACE (271) 73
RETURN_KEY (272) 83 84
LT (273) 93
GT (274) 94
IF (275) 85 86
ELSE (276) 86
COMMA (277) 61 62 71
STATE (278) 101
SHADER_DEF (279) 8
WHILE (280) 87
FOR (281) 88
INC (282) 97 98
DEC (283) 99 100
MUL (284) 32
DIV (285) 33
ADD (286) 34
SUB (287) 35
COLOR (288) 46
POW (289) 53
DOT (290) 54
SQRT (291) 55
HIT (292) 57
INVERSE (293)
PERPENDICULAR (294)
DOMINANTAXIS (295)
TRACE (296) 56
LUMINANCE (297)
RAND (298)
MIN (299)
MAX (300)
ILLUMINANCE (301)
AMBIENT (302)
GE (303) 95
LE (304) 96
METHOD (305) 81
VEC3 (306) 47
EOL (307)


Nonterminals, with rules where they appear

$accept (53)
    on left: 0
program (54)
    on left: 1 2, on right: 0 2
parse (55)
    on left: 3 4 5 6 7, on right: 1 2
shader_def (56)
    on left: 8, on right: 4
class_def (57)
    on left: 9, on right: 8
decl_qualifier (58)
    on left: 10 11 12 13 14, on right: 7 77
decl (59)
    on left: 15 16 17 18, on right: 6 76
stmt (60)
    on left: 19 20 21 22 23 24 25, on right: 3 75 85 86 87 88
assignment (61)
    on left: 26 27 28 29 30 31, on right: 19 89
binary_math_ops (62)
    on left: 32 33 34 35, on right: 13 29 30 36 37 39 40
equation (63)
    on left: 36 37 38 39 40, on right: 13 14 28 30 39 40 41 60 62 70
parenthesis_equation (64)
    on left: 41, on right: 37 38 40
assign (65)
    on left: 42 43, on right: 26 27 28 29 30 31 48
deftype (66)
    on left: 44 45, on right: 10 11 12 13 14 15 16 17 18 67 69 71
type_with_initializers (67)
    on left: 46 47, on right: 18 45 51
func_stmt (68)
    on left: 48 49, on right: 20
func_call (69)
    on left: 50 51 52, on right: 16 48 49 65
keyword_func (70)
    on left: 53 54 55 56 57, on right: 52
param_list (71)
    on left: 58 59 60 61 62, on right: 18 50 51 52 61 62
param_type (72)
    on left: 63 64 65 66, on right: 36 37 39 59 61 91
function_def (73)
    on left: 67, on right: 5
args (74)
    on left: 68 69 70 71, on right: 71 72
arg_list (75)
    on left: 72, on right: 67
block (76)
    on left: 73, on right: 23 67
code_block (77)
    on left: 74 75 76 77, on right: 73 75 76 77
val (78)
    on left: 78 79, on right: 11 26 63 83
id (79)
    on left: 80 81 82, on right: 9 17 27 29 43 44 45 50 64 84 92 97
    98 99 100
return_statement (80)
    on left: 83 84, on right: 21
if_statement (81)
    on left: 85 86, on right: 22
while_loop (82)
    on left: 87, on right: 24
for_loop (83)
    on left: 88, on right: 25
for_condition (84)
    on left: 89, on right: 88
bool_ops (85)
    on left: 90, on right: 85 86 87
bool_val (86)
    on left: 91 92, on right: 89 90
comparator (87)
    on left: 93 94 95 96, on right: 91
unary_ops (88)
    on left: 97 98 99 100, on right: 89
state_all (89)
    on left: 101, on right: 12 31 42 66


State 0

    0 $accept: . program $end

    KEYWORD     shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    TYPE        shift, and go to state 3
    SWIZZLE     shift, and go to state 4
    QUALIFIER   shift, and go to state 5
    LBRACE      shift, and go to state 6
    RETURN_KEY  shift, and go to state 7
    IF          shift, and go to state 8
    STATE       shift, and go to state 9
    WHILE       shift, and go to state 10
    FOR         shift, and go to state 11
    COLOR       shift, and go to state 12
    POW         shift, and go to state 13
    DOT         shift, and go to state 14
    SQRT        shift, and go to state 15
    HIT         shift, and go to state 16
    TRACE       shift, and go to state 17
    METHOD      shift, and go to state 18
    VEC3        shift, and go to state 19

    program                 go to state 20
    parse                   go to state 21
    shader_def              go to state 22
    class_def               go to state 23
    decl_qualifier          go to state 24
    decl                    go to state 25
    stmt                    go to state 26
    assignment              go to state 27
    assign                  go to state 28
    deftype                 go to state 29
    type_with_initializers  go to state 30
    func_stmt               go to state 31
    func_call               go to state 32
    keyword_func            go to state 33
    function_def            go to state 34
    block                   go to state 35
    id                      go to state 36
    return_statement        go to state 37
    if_statement            go to state 38
    while_loop              go to state 39
    for_loop                go to state 40
    state_all               go to state 41


State 1

    9 class_def: KEYWORD . id COLON

    IDENTIFIER  shift, and go to state 2
    SWIZZLE     shift, and go to state 4
    METHOD      shift, and go to state 18

    id  go to state 42


State 2

   80 id: IDENTIFIER .

    $default  reduce using rule 80 (id)


State 3

   44 deftype: TYPE . id

    IDENTIFIER  shift, and go to state 2
    SWIZZLE     shift, and go to state 4
    METHOD      shift, and go to state 18

    id  go to state 43


State 4

   82 id: SWIZZLE .

    $default  reduce using rule 82 (id)


State 5

   10 decl_qualifier: QUALIFIER . deftype SEMICOLON

    TYPE   shift, and go to state 3
    COLOR  shift, and go to state 12
    VEC3   shift, and go to state 19

    deftype                 go to state 44
    type_with_initializers  go to state 45


State 6

   73 block: LBRACE . code_block RBRACE

    $default  reduce using rule 74 (code_block)

    code_block  go to state 46


State 7

   83 return_statement: RETURN_KEY . val
   84                 | RETURN_KEY . id

    IDENTIFIER  shift, and go to state 2
    SWIZZLE     shift, and go to state 4
    INT         shift, and go to state 47
    FLOAT       shift, and go to state 48
    METHOD      shift, and go to state 18

    val  go to state 49
    id   go to state 50


State 8

   85 if_statement: IF . bool_ops stmt
   86             | IF . bool_ops stmt ELSE stmt

    LPARENTHESIS  shift, and go to state 51

    bool_ops  go to state 52


State 9

  101 state_all: STATE .

    $default  reduce using rule 101 (state_all)


State 10

   87 while_loop: WHILE . bool_ops stmt

    LPARENTHESIS  shift, and go to state 51

    bool_ops  go to state 53


State 11

   88 for_loop: FOR . for_condition stmt

    LPARENTHESIS  shift, and go to state 54

    for_condition  go to state 55


State 12

   46 type_with_initializers: COLOR .

    $default  reduce using rule 46 (type_with_initializers)


State 13

   53 keyword_func: POW .

    $default  reduce using rule 53 (keyword_func)


State 14

   54 keyword_func: DOT .

    $default  reduce using rule 54 (keyword_func)


State 15

   55 keyword_func: SQRT .

    $default  reduce using rule 55 (keyword_func)


State 16

   57 keyword_func: HIT .

    $default  reduce using rule 57 (keyword_func)


State 17

   56 keyword_func: TRACE .

    $default  reduce using rule 56 (keyword_func)


State 18

   81 id: METHOD .

    $default  reduce using rule 81 (id)


State 19

   47 type_with_initializers: VEC3 .

    $default  reduce using rule 47 (type_with_initializers)


State 20

    0 $accept: program . $end
    2 program: program . parse

    $end        shift, and go to state 56
    KEYWORD     shift, and go to state 1
    IDENTIFIER  shift, and go to state 2
    TYPE        shift, and go to state 3
    SWIZZLE     shift, and go to state 4
    QUALIFIER   shift, and go to state 5
    LBRACE      shift, and go to state 6
    RETURN_KEY  shift, and go to state 7
    IF          shift, and go to state 8
    STATE       shift, and go to state 9
    WHILE       shift, and go to state 10
    FOR         shift, and go to state 11
    COLOR       shift, and go to state 12
    POW         shift, and go to state 13
    DOT         shift, and go to state 14
    SQRT        shift, and go to state 15
    HIT         shift, and go to state 16
    TRACE       shift, and go to state 17
    METHOD      shift, and go to state 18
    VEC3        shift, and go to state 19

    parse                   go to state 57
    shader_def              go to state 22
    class_def               go to state 23
    decl_qualifier          go to state 24
    decl                    go to state 25
    stmt                    go to state 26
    assignment              go to state 27
    assign                  go to state 28
    deftype                 go to state 29
    type_with_initializers  go to state 30
    func_stmt               go to state 31
    func_call               go to state 32
    keyword_func            go to state 33
    function_def            go to state 34
    block                   go to state 35
    id                      go to state 36
    return_statement        go to state 37
    if_statement            go to state 38
    while_loop              go to state 39
    for_loop                go to state 40
    state_all               go to state 41


State 21

    1 program: parse .

    $default  reduce using rule 1 (program)


State 22

    4 parse: shader_def .

    $default  reduce using rule 4 (parse)


State 23

    8 shader_def: class_def . SHADER_DEF SEMICOLON

    SHADER_DEF  shift, and go to state 58


State 24

    7 parse: decl_qualifier .

    $default  reduce using rule 7 (parse)


State 25

    6 parse: decl .

    $default  reduce using rule 6 (parse)


State 26

    3 parse: stmt .

    $default  reduce using rule 3 (parse)


State 27

   19 stmt: assignment . SEMICOLON

    SEMICOLON  shift, and go to state 59


State 28

   26 assignment: assign . val
   27           | assign . id
   28           | assign . equation
   29           | assign . binary_math_ops id
   30           | assign . binary_math_ops equation
   31           | assign . state_all
   48 func_stmt: assign . func_call

    IDENTIFIER    shift, and go to state 2
    SWIZZLE       shift, and go to state 4
    INT           shift, and go to state 47
    FLOAT         shift, and go to state 48
    LPARENTHESIS  shift, and go to state 60
    STATE         shift, and go to state 9
    MUL           shift, and go to state 61
    DIV           shift, and go to state 62
    ADD           shift, and go to state 63
    SUB           shift, and go to state 64
    COLOR         shift, and go to state 12
    POW           shift, and go to state 13
    DOT           shift, and go to state 14
    SQRT          shift, and go to state 15
    HIT           shift, and go to state 16
    TRACE         shift, and go to state 17
    METHOD        shift, and go to state 18
    VEC3          shift, and go to state 19

    binary_math_ops         go to state 65
    equation                go to state 66
    parenthesis_equation    go to state 67
    type_with_initializers  go to state 68
    func_call               go to state 69
    keyword_func            go to state 33
    param_type              go to state 70
    val                     go to state 71
    id                      go to state 72
    state_all               go to state 73


State 29

   11 decl_qualifier: deftype . EQUAL val SEMICOLON
   12               | deftype . EQUAL state_all SEMICOLON
   13               | deftype . EQUAL binary_math_ops equation SEMICOLON
   14               | deftype . EQUAL equation SEMICOLON
   15 decl: deftype . SEMICOLON
   16     | deftype . EQUAL func_call SEMICOLON
   17     | deftype . EQUAL id SEMICOLON
   18     | deftype . EQUAL type_with_initializers LPARENTHESIS param_list RPARENTHESIS
   67 function_def: deftype . arg_list block

    SEMICOLON     shift, and go to state 74
    EQUAL         shift, and go to state 75
    LPARENTHESIS  shift, and go to state 76

    arg_list  go to state 77


State 30

   45 deftype: type_with_initializers . id
   51 func_call: type_with_initializers . LPARENTHESIS param_list RPARENTHESIS

    IDENTIFIER    shift, and go to state 2
    SWIZZLE       shift, and go to state 4
    LPARENTHESIS  shift, and go to state 78
    METHOD        shift, and go to state 18

    id  go to state 79


State 31

   20 stmt: func_stmt . SEMICOLON

    SEMICOLON  shift, and go to state 80


State 32

   49 func_stmt: func_call .

    $default  reduce using rule 49 (func_stmt)


State 33

   52 func_call: keyword_func . LPARENTHESIS param_list RPARENTHESIS

    LPARENTHESIS  shift, and go to state 81


State 34

    5 parse: function_def .

    $default  reduce using rule 5 (parse)


State 35

   23 stmt: block .

    $default  reduce using rule 23 (stmt)


State 36

   43 assign: id . EQUAL
   50 func_call: id . LPARENTHESIS param_list RPARENTHESIS

    EQUAL         shift, and go to state 82
    LPARENTHESIS  shift, and go to state 83


State 37

   21 stmt: return_statement . SEMICOLON

    SEMICOLON  shift, and go to state 84


State 38

   22 stmt: if_statement .

    $default  reduce using rule 22 (stmt)


State 39

   24 stmt: while_loop .

    $default  reduce using rule 24 (stmt)


State 40

   25 stmt: for_loop .

    $default  reduce using rule 25 (stmt)


State 41

   42 assign: state_all . EQUAL

    EQUAL  shift, and go to state 85


State 42

    9 class_def: KEYWORD id . COLON

    COLON  shift, and go to state 86


State 43

   44 deftype: TYPE id .

    $default  reduce using rule 44 (deftype)


State 44

   10 decl_qualifier: QUALIFIER deftype . SEMICOLON

    SEMICOLON  shift, and go to state 87


State 45

   45 deftype: type_with_initializers . id

    IDENTIFIER  shift, and go to state 2
    SWIZZLE     shift, and go to state 4
    METHOD      shift, and go to state 18

    id  go to state 79


State 46

   73 block: LBRACE code_block . RBRACE
   75 code_block: code_block . stmt
   76           | code_block . decl
   77           | code_block . decl_qualifier

    IDENTIFIER  shift, and go to state 2
    TYPE        shift, and go to state 3
    SWIZZLE     shift, and go to state 4
    QUALIFIER   shift, and go to state 5
    LBRACE      shift, and go to state 6
    RBRACE      shift, and go to state 88
    RETURN_KEY  shift, and go to state 7
    IF          shift, and go to state 8
    STATE       shift, and go to state 9
    WHILE       shift, and go to state 10
    FOR         shift, and go to state 11
    COLOR       shift, and go to state 12
    POW         shift, and go to state 13
    DOT         shift, and go to state 14
    SQRT        shift, and go to state 15
    HIT         shift, and go to state 16
    TRACE       shift, and go to state 17
    METHOD      shift, and go to state 18
    VEC3        shift, and go to state 19

    decl_qualifier          go to state 89
    decl                    go to state 90
    stmt                    go to state 91
    assignment              go to state 27
    assign                  go to state 28
    deftype                 go to state 92
    type_with_initializers  go to state 30
    func_stmt               go to state 31
    func_call               go to state 32
    keyword_func            go to state 33
    block                   go to state 35
    id                      go to state 36
    return_statement        go to state 37
    if_statement            go to state 38
    while_loop              go to state 39
    for_loop                go to state 40
    state_all               go to state 41


State 47

   78 val: INT .

    $default  reduce using rule 78 (val)


State 48

   79 val: FLOAT .

    $default  reduce using rule 79 (val)


State 49

   83 return_statement: RETURN_KEY val .

    $default  reduce using rule 83 (return_statement)


State 50

   84 return_statement: RETURN_KEY id .

    $default  reduce using rule 84 (return_statement)


State 51

   90 bool_ops: LPARENTHESIS . bool_val RPARENTHESIS

    IDENTIFIER  shift, and go to state 2
    SWIZZLE     shift, and go to state 4
    INT         shift, and go to state 47
    FLOAT       shift, and go to state 48
    STATE       shift, and go to state 9
    COLOR       shift, and go to state 12
    POW         shift, and go to state 13
    DOT         shift, and go to state 14
    SQRT        shift, and go to state 15
    HIT         shift, and go to state 16
    TRACE       shift, and go to state 17
    METHOD      shift, and go to state 18
    VEC3        shift, and go to state 19

    type_with_initializers  go to state 68
    func_call               go to state 93
    keyword_func            go to state 33
    param_type              go to state 94
    val                     go to state 95
    id                      go to state 96
    bool_val                go to state 97
    state_all               go to state 98


State 52

   85 if_statement: IF bool_ops . stmt
   86             | IF bool_ops . stmt ELSE stmt

    IDENTIFIER  shift, and go to state 2
    SWIZZLE     shift, and go to state 4
    LBRACE      shift, and go to state 6
    RETURN_KEY  shift, and go to state 7
    IF          shift, and go to state 8
    STATE       shift, and go to state 9
    WHILE       shift, and go to state 10
    FOR         shift, and go to state 11
    COLOR       shift, and go to state 12
    POW         shift, and go to state 13
    DOT         shift, and go to state 14
    SQRT        shift, and go to state 15
    HIT         shift, and go to state 16
    TRACE       shift, and go to state 17
    METHOD      shift, and go to state 18
    VEC3        shift, and go to state 19

    stmt                    go to state 99
    assignment              go to state 27
    assign                  go to state 28
    type_with_initializers  go to state 68
    func_stmt               go to state 31
    func_call               go to state 32
    keyword_func            go to state 33
    block                   go to state 35
    id                      go to state 36
    return_statement        go to state 37
    if_statement            go to state 38
    while_loop              go to state 39
    for_loop                go to state 40
    state_all               go to state 41


State 53

   87 while_loop: WHILE bool_ops . stmt

    IDENTIFIER  shift, and go to state 2
    SWIZZLE     shift, and go to state 4
    LBRACE      shift, and go to state 6
    RETURN_KEY  shift, and go to state 7
    IF          shift, and go to state 8
    STATE       shift, and go to state 9
    WHILE       shift, and go to state 10
    FOR         shift, and go to state 11
    COLOR       shift, and go to state 12
    POW         shift, and go to state 13
    DOT         shift, and go to state 14
    SQRT        shift, and go to state 15
    HIT         shift, and go to state 16
    TRACE       shift, and go to state 17
    METHOD      shift, and go to state 18
    VEC3        shift, and go to state 19

    stmt                    go to state 100
    assignment              go to state 27
    assign                  go to state 28
    type_with_initializers  go to state 68
    func_stmt               go to state 31
    func_call               go to state 32
    keyword_func            go to state 33
    block                   go to state 35
    id                      go to state 36
    return_statement        go to state 37
    if_statement            go to state 38
    while_loop              go to state 39
    for_loop                go to state 40
    state_all               go to state 41


State 54

   89 for_condition: LPARENTHESIS . assignment SEMICOLON bool_val SEMICOLON unary_ops RPARENTHESIS

    IDENTIFIER  shift, and go to state 2
    SWIZZLE     shift, and go to state 4
    STATE       shift, and go to state 9
    METHOD      shift, and go to state 18

    assignment  go to state 101
    assign      go to state 102
    id          go to state 103
    state_all   go to state 41


State 55

   88 for_loop: FOR for_condition . stmt

    IDENTIFIER  shift, and go to state 2
    SWIZZLE     shift, and go to state 4
    LBRACE      shift, and go to state 6
    RETURN_KEY  shift, and go to state 7
    IF          shift, and go to state 8
    STATE       shift, and go to state 9
    WHILE       shift, and go to state 10
    FOR         shift, and go to state 11
    COLOR       shift, and go to state 12
    POW         shift, and go to state 13
    DOT         shift, and go to state 14
    SQRT        shift, and go to state 15
    HIT         shift, and go to state 16
    TRACE       shift, and go to state 17
    METHOD      shift, and go to state 18
    VEC3        shift, and go to state 19
